<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/floating_layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dimen_standard_s2"
    app:cardElevation="0dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="@dimen/dimen_standard_s3"
            android:id="@+id/right_guideline"
            android:orientation="vertical"/>

        <!-- country title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="@dimen/dimen_standard_s3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/product_description_title"
            android:textColor="@color/dark"
            android:id="@+id/country_name"/>

        <!-- view details-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/dimen_standard_s3"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/view_details"
            android:textColor="@color/dark"
            android:id="@+id/view_details"/>

        <!-- Dividing line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#dddddd"
            android:id="@+id/line"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_name"
            android:layout_marginStart="@dimen/dimen_standard_s3"
            android:layout_marginEnd="@dimen/dimen_standard_s3"/>

        <!-- local market shares section-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_standard_s3"
            app:layout_constraintStart_toStartOf="@id/country_name"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:textSize="13sp"
            android:maxLines="2"
            android:text="@string/percentage_of_global_imports_title"
            android:textColor="@color/grey"
            app:layout_constraintWidth_percent="0.4"
            android:id="@+id/global_imports_percentage_title"/>

        <TextView
            android:id="@+id/percentage_global_imports"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/product_description_title"
            android:textColor="@color/dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/value_of_imports"
            app:layout_constraintStart_toStartOf="@id/global_imports_percentage_title"
            app:layout_constraintTop_toBottomOf="@id/global_imports_percentage_title"
            app:layout_constraintWidth_percent="0.4" />

        <!-- tariff rate section-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintTop_toTopOf="@id/global_imports_percentage_title"
            app:layout_constraintStart_toEndOf="@id/global_imports_percentage_title"
            android:layout_marginStart="@dimen/dimen_standard_s5"
            android:textSize="13sp"
            android:text="@string/tariff_rate_title"
            android:textColor="@color/grey"
            android:id="@+id/tariff_rate_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_standard_s1"
            app:layout_constraintStart_toStartOf="@id/tariff_rate_title"
            app:layout_constraintTop_toBottomOf="@id/tariff_rate_title"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:id="@+id/customs_duty_rate"/>


        <!-- value of imports section-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/customs_duty_rate"
            app:layout_constraintStart_toStartOf="@id/customs_duty_rate"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            android:textSize="13sp"
            android:gravity="start"
            android:maxLines="2"
            android:layout_marginTop="@dimen/dimen_standard_s1"
            android:text="@string/annual_imports_title"
            android:textColor="@color/grey"
            android:id="@+id/value_of_imports_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_standard_s1"
            app:layout_constraintStart_toStartOf="@id/value_of_imports_title"
            app:layout_constraintTop_toBottomOf="@id/value_of_imports_title"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:id="@+id/value_of_imports"/>

        <!-- add placeholder for margin bottom-->
        <androidx.constraintlayout.widget.Placeholder
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_standard_s5"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toBottomOf="@id/value_of_imports"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
