<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/floating_layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@drawable/shape_common_card_bg">

    <include layout="@layout/layout_tariff_info_header" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/left_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/right_content"
        app:layout_constraintTop_toBottomOf="@+id/product_img">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/local_market_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/percentage_of_global_imports_title"
            android:textColor="#666666"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/share_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/right_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/left_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_img">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/duty_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/tariff_rate_title"
            android:textColor="#666666"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/duty_rate_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#222222"
            android:textSize="13sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/import_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/annual_imports_title"
            android:textColor="#666666"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/import_value_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#222222"
            android:textSize="13sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>