<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingVertical="16dp"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/leading_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_common_card_bg"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/product_image_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/chat_icon"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#222222"
                android:textSize="13sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginTop="4dp"
                android:textColor="#222222"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/chat_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="3dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/chat_icon" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/transaction_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transaction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latest_transaction"
                        android:textColor="#767676"
                        android:textSize="11sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/transaction_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="#222222"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/imports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annual_imports_title"
                        android:textColor="#767676"
                        android:textSize="11sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/imports_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="#222222"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>