<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/cat_search_view_suggestion_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/recommend_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:indeterminate="true" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:background="@drawable/home_header_new"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_selector"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/insights_title"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="28sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/country_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/shape_country_select_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:src="@drawable/country_global"
                    android:contentDescription="@string/country_global_description"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/country_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:textSize="13sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

        <com.google.android.material.search.SearchBar
            android:id="@+id/cat_search_bar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="bottom"
            android:hint="@string/cat_searchbar_hint" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/cat_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/cat_searchbar_hint"
        app:layout_anchor="@id/cat_search_bar">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linear_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tip_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:textColor="#767676"
                android:textSize="13sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestion_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
